完善源码注释和教材
- 重写IDEA启动调试教材，基于当前项目结构
- 去除教材中的重复内容，聚焦实际工程配置
- 为API层核心控制器添加详细中文注释：
  * WorkflowInstanceController - 工作流实例管理
  * LoginController - 用户认证和安全控制
  * ExecutorController - 工作流执行管理
- 注释覆盖率持续提升，便于源码学习和理解